tests/tuples/ttypedesc_in_tuple_b.nim
discard """
errormsg: "Mixing types and values in tuples is not allowed."
"""

var bar = (int, 1)
